force-app/main/default/objects/Product__c/validationRules/Product_Price_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Price_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Price__c &lt;= 0</errorConditionFormula>
    <errorMessage>O preço do produto deve ser maior que zero.</errorMessage>
</ValidationRule>